Fixes squash line gap in rebase editor

--- a/src/webviews/apps/rebase/rebase.scss
+++ b/src/webviews/apps/rebase/rebase.scss
@@ -164,7 +164,7 @@ $entry-padding: 5px;
 			border-right: 2px solid rgba(212, 153, 0, 1);
 			height: #{31px + ($entry-padding * 2)};
 			margin-left: -18px;
-			margin-top: 6px;
+			margin-top: 5px;
 			position: absolute;
 			z-index: 1;
 		}
